[package]
name = "squash"
version = "0.1.0"
edition = "2021"
description = "A Docker image layer squashing tool"
authors = ["mingminwen@gmail.com"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tar = "0.4"
flate2 = "1.0"
tempfile = "3.0"
sha2 = "0.10"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "layer_merge_benchmark"
harness = false
